--- a/app/src/main/res/layout/activity_bestellen_liefern.xml
+++ b/app/src/main/res/layout/activity_bestellen_liefern.xml
@@ -8,40 +8,36 @@
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="110dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:onClick="login"
         android:text="Login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonFeedback"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonMenu"
-        android:layout_width="94dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="menue"
         android:text="Menü"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/buttonReservation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonReservation"
-        android:layout_width="94dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="reservation"
         android:text="Reserv."
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/buttonFeedback"
-        app:layout_constraintStart_toEndOf="@+id/menuButton"
+        app:layout_constraintStart_toEndOf="@+id/buttonMenu"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonFeedback"
-        android:layout_width="112dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:onClick="feedback"
         android:text="Feedback"
