--- a/app/src/main/res/layout/activity_bestellungsverlauf.xml
+++ b/app/src/main/res/layout/activity_bestellungsverlauf.xml
@@ -9,8 +9,8 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="520dp"
-        android:layout_marginBottom="116dp"
+        android:layout_height="500dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -27,39 +27,36 @@
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="117dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:onClick="login"
         android:text="Login"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonFeedback"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonMenu"
-        android:layout_width="94dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="menue"
         android:text="Menü"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/buttonReservation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonReservation"
-        android:layout_width="94dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="reservation"
         android:text="Reserv."
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/buttonFeedback"
-        app:layout_constraintStart_toEndOf="@+id/menuButton"
+        app:layout_constraintStart_toEndOf="@+id/buttonMenu"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonFeedback"
-        android:layout_width="112dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:onClick="feedback"
         android:text="Feedback"
