--- a/app/src/main/res/layout/fragment_bestellen_abholen.xml
+++ b/app/src/main/res/layout/fragment_bestellen_abholen.xml
@@ -60,146 +60,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2" />
 
-    <TextView
-        android:id="@+id/textViewBAKontaktAdr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="22dp"
-        android:text="Kontaktadresse:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider7" />
-
-    <EditText
-        android:id="@+id/baSurname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:ems="10"
-        android:hint="Nachname"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewBAKontaktAdr" />
-
     <View
         android:id="@+id/divider7"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="22dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/textViewBAKontaktAdr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewGesamt" />
-
-    <EditText
-        android:id="@+id/baName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:ems="10"
-        android:hint="Vorname"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baSurname" />
-
-    <EditText
-        android:id="@+id/baStreet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:ems="10"
-        android:hint="Strasse"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baName" />
-
-    <EditText
-        android:id="@+id/baHNr"
-        android:layout_width="100sp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:ems="10"
-        android:hint="HNr"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/baOrt"
-        app:layout_constraintStart_toEndOf="@+id/baStreet" />
-
-    <EditText
-        android:id="@+id/baPlz"
-        android:layout_width="100sp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:ems="10"
-        android:hint="PLZ"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baStreet" />
-
-    <EditText
-        android:id="@+id/baOrt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:ems="10"
-        android:hint="Ort"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/baPlz"
-        app:layout_constraintTop_toBottomOf="@+id/baStreet" />
-
-    <EditText
-        android:id="@+id/baEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:width="220sp"
-        android:ems="10"
-        android:hint="Email (Emanuel@gmx.de)"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baPlz" />
-
-    <RadioButton
-        android:id="@+id/radioButtonBAPayPal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="4dp"
-        android:text="PayPal"
-        app:layout_constraintStart_toEndOf="@+id/radioButtonBABargeld"
-        app:layout_constraintTop_toBottomOf="@+id/baEmail" />
-
-    <TextView
-        android:id="@+id/textViewBABezahlen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="17dp"
-        android:text="Bezahlvorgang:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baEmail" />
-
-    <RadioButton
-        android:id="@+id/radioButtonBABargeld"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="4dp"
-        android:text="Bargeld"
-        app:layout_constraintStart_toEndOf="@+id/textViewBABezahlen"
-        app:layout_constraintTop_toBottomOf="@+id/baEmail" />
 
     <Button
         android:id="@+id/returnButton"
@@ -228,28 +97,237 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <RadioButton
-        android:id="@+id/radioButtonBAKreditkarte"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="49dp"
-        android:text="Kreditkarte"
-        app:layout_constraintStart_toEndOf="@+id/radioButtonBAPayPal"
-        app:layout_constraintTop_toBottomOf="@+id/baOrt" />
-
     <ScrollView
+        android:id="@+id/scrollViewPickupItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/dividerBestelluebersicht"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMenge"
-        tools:layout_editor_absoluteX="190dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMenge">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/scrollViewPickupForm"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/abortButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider7">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editTextCVVBA"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="CVV"
+                android:inputType="number"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.842"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextExpireDateBA" />
+
+            <TextView
+                android:id="@+id/textViewCreditCard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="50dp"
+                android:text="Kreditkartendaten:"
+                android:visibility="invisible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewBABezahlen" />
+
+            <TextView
+                android:id="@+id/textViewBAKontaktAdr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:text="Kontaktadresse:"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/baSurname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:ems="10"
+                android:hint="Nachname"
+                android:inputType="textPersonName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewBAKontaktAdr" />
+
+            <EditText
+                android:id="@+id/baName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:ems="10"
+                android:hint="Vorname"
+                android:inputType="textPersonName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/baSurname" />
+
+            <EditText
+                android:id="@+id/baStreet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:ems="10"
+                android:hint="Strasse"
+                android:inputType="textPersonName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/baName" />
+
+            <EditText
+                android:id="@+id/baHNr"
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="11dp"
+                android:layout_marginLeft="11dp"
+                android:ems="10"
+                android:hint="HNr"
+                android:inputType="textPersonName"
+                app:layout_constraintBottom_toTopOf="@+id/baOrt"
+                app:layout_constraintStart_toEndOf="@+id/baStreet" />
+
+            <EditText
+                android:id="@+id/baPlz"
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:ems="10"
+                android:hint="PLZ"
+                android:inputType="textPersonName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/baStreet" />
+
+            <EditText
+                android:id="@+id/baOrt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="11dp"
+                android:layout_marginLeft="11dp"
+                android:ems="10"
+                android:hint="Ort"
+                android:inputType="textPersonName"
+                app:layout_constraintStart_toEndOf="@+id/baPlz"
+                app:layout_constraintTop_toBottomOf="@+id/baStreet" />
+
+            <EditText
+                android:id="@+id/baEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:width="220sp"
+                android:ems="10"
+                android:hint="Email (Emanuel@gmx.de)"
+                android:inputType="textPersonName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/baPlz" />
+
+            <TextView
+                android:id="@+id/textViewBABezahlen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="17dp"
+                android:text="Bezahlvorgang:"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/baEmail" />
+
+            <EditText
+                android:id="@+id/editTextExpireDateBA"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Gültig bis"
+                android:inputType="date"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.837"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextCardNumberBA" />
+
+            <RadioGroup
+                android:id="@+id/radioGroupPayment"
+                android:layout_width="277dp"
+                android:layout_height="62dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/textViewBABezahlen"
+                app:layout_constraintTop_toBottomOf="@+id/baEmail">
+
+                <RadioButton
+                    android:id="@+id/radioButtonBABargeld"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="0dp"
+                    android:text="Bargeld"
+                    app:layout_constraintStart_toEndOf="@+id/textViewBABezahlen"
+                    app:layout_constraintTop_toBottomOf="@+id/baEmail" />
+
+                <RadioButton
+                    android:id="@+id/radioButtonBAKreditkarte"
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="0dp"
+                    android:text="Kreditkarte"
+                    app:layout_constraintStart_toEndOf="@+id/radioButtonBAPayPal"
+                    app:layout_constraintTop_toBottomOf="@+id/baOrt" />
+
+                <RadioButton
+                    android:id="@+id/radioButtonBAPayPal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="0dp"
+                    android:text="PayPal" />
+            </RadioGroup>
+
+            <EditText
+                android:id="@+id/editTextCardNumberBA"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="KartenNr"
+                android:inputType="number"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textViewCreditCard"
+                app:layout_constraintTop_toBottomOf="@+id/radioGroupPayment" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
